syntax = "proto3";

package weather;

option go_package = "codeberg.org/andcscott/OpenWeatherMap-gRPC-API/proto";

//import "location_types.proto";
//import "units.proto"

message RequestCurrent {
  //LocationType location_type = 1; NOT IMPLEMENTED YET
  //Units units = 2; NOT IMPLEMENTED YET
  string city = 1;
  // optional string zip_code = 2; NOT IMPLEMENTED YET
  // optional string state = 2; // US Only / NOT IMPLEMENTED YET
  // optional string country = 3; // Must be an ISO 3166 code / NOT IMPLEMENTED YET
}

message SendCurrent {
  string payload = 1;
}
