syntax = "proto3";

package weather;

option go_package = "codeberg.org/andcscott/OpenWeatherMap-gRPC-API/proto";

enum LocationType {
  LOCATION_TYPE_UNSPECIFIED = 0;
  LOCATION_CITY = 1;
  LOCATION_ZIP = 2;
  LOCATION_COORDS = 3;
  LOCATION_CITY_STATE = 4;
  LOCATION_CITY_COUNTRY = 5;
  LOCATION_ZIP_COUNTRY = 6;
}
